frontend - fixed overflow issues of the components in Home Container

--- a/frontend/src/app/components/general-components/containers/home-container/home-container.component.css
+++ b/frontend/src/app/components/general-components/containers/home-container/home-container.component.css
@@ -27,7 +27,7 @@ body {
     margin-top: -20px;
     margin-left: -10px;
     margin-right: -8px;
-    margin-bottom: -10px;
+    margin-bottom: -20px;
     background-image: url('../../../../../assets/background.jpg');
     background-repeat: no-repeat;
     background-size: cover;
