--- a/frontend/src/app/components/skills/skills.component.css
+++ b/frontend/src/app/components/skills/skills.component.css
@@ -31,7 +31,7 @@
     border-radius: 10px;
     width: 800px;
     margin-left: 30px;
-    margin-bottom: 31px;
+    margin-bottom: 42px;
 }
 
 .skill-tree {
